--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -29,14 +29,14 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm px-4 py-3">
     <div class="container-fluid">
-        <a class="navbar-brand fw-bold" href="#">Iset Rades</a>
+        <a class="navbar-brand fw-bold" href="{{ path('app_home') }}">Iset Rades</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain" aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarMain">
             <ul class="navbar-nav gap-3">
-                <li class="nav-item"><a class="nav-link hover-link text-dark fw-medium" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link hover-link text-dark fw-medium" href="#">Clubs</a></li>
+                <li class="nav-item"><a class="nav-link hover-link text-dark fw-medium" href="{{ path('app_home') }}">Home</a></li>
+                <li class="nav-item"><a class="nav-link hover-link text-dark fw-medium" href="{{ path('app_club_show2') }}">Clubs</a></li>
                 <li class="nav-item"><a class="nav-link hover-link text-dark fw-medium" href="#">Events</a></li>
                 <li class="nav-item"><a class="nav-link hover-link text-dark fw-medium" href="#">Contact</a></li>
             </ul>
