--- a/templates/Navbar.html.twig
+++ b/templates/Navbar.html.twig
@@ -7,10 +7,10 @@
 		<div class="collapse navbar-collapse justify-content-center" id="navbarMain">
 			<ul class="navbar-nav gap-3">
 				<li class="nav-item">
-					<a class="nav-link hover-link text-dark fw-medium" href="#">Home</a>
+					<a class="nav-link hover-link text-dark fw-medium" href="{{path('app_home')}}">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link hover-link text-dark fw-medium" href="#">Clubs</a>
+					<a class="nav-link hover-link text-dark fw-medium" href="{{ path('app_club_show2')}}">Clubs</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link hover-link text-dark fw-medium" href="#">Events</a>
