--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,37 +1,71 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Log in!
+{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	<div class="row">
+		<div class="col-md-5 login-image d-md-block">
+			<img src="{{ asset('images/left-col.png') }}" alt="">
+		</div>
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+		<div class="col-md-7 d-flex align-items-center justify-content-center">
+			<div class="w-100" style="max-width: 450px;">
+				<div class="mb-4 position-relative">
+					<h2 class="text-dark mb-1">Welcome</h2>
+					<p class="text-secondary">Please enter your details</p>
+				</div>
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+				<!-- Google Sign In -->
+				<div class="mb-4 position-relative">
+					<button class="btn btn-outline-secondary w-100 py-2 rounded-3 d-flex align-items-center justify-content-center">
+						<img src="{{ asset('images/google-logo.png') }}" width="20" class="me-2" alt="Google">
+						Sign in with Google
+					</button>
+				</div>
+				<div class="d-flex align-items-center mb-4 position-relative">
+					<hr class="flex-grow-1">
+					<span class="mx-3 text-secondary">or continue with email</span>
+					<hr class="flex-grow-1">
+				</div>
+				<form method="post">
+					{% if error %}
+						<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+					{% endif %}
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+					<div class="mb-3 position-relative">
+						<label for="inputEmail" class="form-label text-dark">Email</label>
+						<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control py-2" placeholder="Enter your email" autocomplete="email" required autofocus>
+					</div>
 
-    <div class="checkbox mb-3">
-        <label>
-            <input type="checkbox" name="_remember_me"> Remember me
-        </label>
-    </div>
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
-{% endblock %}
+					<div class="mb-3 position-relative">
+						<label for="inputPassword" class="form-label text-dark">Password</label>
+						<input type="password" name="password" id="inputPassword" class="form-control py-2" autocomplete="current-password" placeholder='Enter your password' required>
+					</div>
+
+
+					<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+					<div class="d-flex justify-content-between align-items-center mb-4 position-relative">
+						<div class="form-check">
+							<label>
+								<input type="checkbox" name="_remember_me">
+								Remember me
+							</label>
+						</div>
+						<a href="#" class="text-decoration-none" style="color: #6c5ce7;">Forgot password?</a>
+					</div>
+
+					<button class="btn w-100 py-2 rounded-3 text-white" type="submit" style="background-color: #6c5ce7;">
+						Sign in
+					</button>
+				</form>
+				<div class="text-center position-relative">
+					<span class="text-muted">Don't have an account?</span>
+					<a href="{{ path('app_register') }}" class="text-decoration-none ms-1" style="color: #6c5ce7;">Create account</a>
+				</div>
+			</div>
+		</div>
+
+	{% endblock %}
